# hotlog

./: .env.example  .gitignore  .mcp.json  .prettierignore  .prettierrc.json  AGENTS.md  README.md  components.json  database.types.ts  docker-compose.yaml  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json
backend/: Dockerfile  README.md  go.mod
backend/cmd/api/: main.go
backend/internal/config/: config.go
backend/internal/db/: pool.go
better-auth_migrations/: 2026-02-23T00-00-00.000Z.sql
messages/: en.json
sdk/: .gitignore  README.md  pyproject.toml
sdk/src/hotlog/: __init__.py  cli.py  client.py  codegen.py  errors.py  models.py
sdk/tests/: conftest.py  test_cli.py  test_client.py  test_codegen.py
src/: proxy.ts
src/i18n/: request.ts  routing.ts
src/lib/: schema-validator.ts
supabase/: seed.sql
supabase/migrations/: 20260404_add_rls_policies.sql  20260404_seed_permissions.sql  20260411181128_schemas_immutable_contracts.sql  20260411185758_event_stats_rpc.sql  20260411194700_has_permission_subject_wildcard.sql  20260412_layout_component_columns.sql  20260413_component_span.sql  20260414_role_layouts.sql  20260415_fix_layouts_select_policy.sql  20260416_fix_role_layouts_rls.sql  20260417_invitations.sql  20260418_fix_user_projects_select.sql  20260419_update_user_role_fn.sql  20260420_fix_user_roles_select.sql  20260421_event_ingestion.sql  20260422_sdk_schemas_fn.sql  20260423_fix_sdk_schemas_jsonb_cast.sql  20260424_fix_ingest_event_return_types.sql  20260425_fix_get_fields_return_types.sql
(+363 files in other folders)
